docs: edit PatientsResponse
